tests/syntax_error/import_after_def.jou
def foo() -> void:
    return

import "stdlib/io.jou"  # Error: imports must be in the beginning of the file
